Stopped glow animation in onPause, to prevent it stuttering when gear or MS icon tapped.
Fixed normal-mdpi glow image - was 50% of hdpi not 67%.

Fixed MS link to Play store.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="stop">stop</string>
     <string name="app_name">M Timer</string>
-    <string name="otherswlink">market://search?q=pub:measuredsoftware.co.uk</string>
+    <string name="otherswlink">market://search?q=pub:Measured+Software</string>
     <string name="use_notifications_title">Show Notifications</string>
     <string name="use_notifications_desc">Show notification when timer is set?</string>
     <string name="send_anon_stats_title">Usage Statistics</string>
