Hooked in sendstats pref to Analytics.
Changed touch glow position.

Made hue button only light up on click - not pressed - fixes problem when touching then draggin away leaving the button on.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="notification_exdesc">Timer active - tap to view</string>
     <string name="alarm_tone_title">Alarm Tone</string>
     <string name="alarm_tone_desc">Choose the alarm tone</string>
+    <string name="prefs_key_usenotifications">usenotifications</string>
+    <string name="prefs_key_sendstats">sendstats</string>
 </resources>
